Calculate metrics for remote desktop events and store in DB.