@@ -5,17 +5,16 @@ import eu.ill.visa.core.entity.Metric;
 import eu.ill.visa.core.entity.enumerations.MetricType;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-public record LongGauge(String name, List<GaugeRecord<Long>> values) implements MetricProvider {
+public record LongGauge(String name, String hostname, List<GaugeRecord<Long>> values) implements MetricProvider {
 
-    LongGauge(String name) {
-        this(name, Arrays.asList(new GaugeRecord<>(0L)));
+    public LongGauge(String name, String hostname) {
+        this(name, hostname, new ArrayList<>(List.of(new GaugeRecord<>(0L))));
     }
 
-    LongGauge(String name, Long initialValue) {
-        this(name, Arrays.asList(new GaugeRecord<>(initialValue)));
+    public LongGauge(String name, String hostname, Long initialValue) {
+        this(name, hostname, new ArrayList<>(List.of(new GaugeRecord<>(initialValue))));
     }
 
     Long value() {
@@ -36,12 +35,19 @@ public record LongGauge(String name, List<GaugeRecord<Long>> values) implements 
         }
     }
 
+    public void set(Long value) {
+        synchronized (this.values) {
+            this.values.add(new GaugeRecord<>(value));
+        }
+    }
+
     public List<Metric> toMetrics() {
         ArrayList<GaugeRecord<Long>> copied;
         synchronized (this.values) {
             copied = new ArrayList<>(values);
+            Long current = copied.getLast().value();
             values.clear();
-            values.add(new GaugeRecord<>(this.value()));
+            values.add(new GaugeRecord<>(current));
         }
 
         List<Metric> metrics = new ArrayList<>();
@@ -53,6 +59,7 @@ public record LongGauge(String name, List<GaugeRecord<Long>> values) implements 
 
             metrics.add(Metric.builder()
                 .name(name)
+                .host(hostname)
                 .statistic((double) min)
                 .type(MetricType.MIN)
                 .recordCount((long)values.size())
@@ -62,6 +69,7 @@ public record LongGauge(String name, List<GaugeRecord<Long>> values) implements 
 
             metrics.add(Metric.builder()
                 .name(name)
+                .host(hostname)
                 .statistic((double) max)
                 .type(MetricType.MAX)
                 .recordCount((long)values.size())
@@ -71,6 +79,7 @@ public record LongGauge(String name, List<GaugeRecord<Long>> values) implements 
 
             metrics.add(Metric.builder()
                 .name(name)
+                .host(hostname)
                 .statistic((double) current)
                 .type(MetricType.VALUE)
                 .recordCount((long)values.size())
